<resources>
    <string name="app_name">MaterialLoginPage</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_headlines">Headlines</string>
    <string name="category_technology">Technology</string>
    <string name="category_sports">Sports</string>
    <string name="category_business">Business</string>
    <string name="category_world">World</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_science">Science</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scheme1"><p>Under the PMFBY, the premium rates to be paid by farmers are very low and balance premium will be paid by the Government.
        There is no upper limit on Government subsidy.\nLaunched: Feb 18, 2016 </p></string>
    <string name="scheme2"><p>It is a national mission to improve farm productivity and ensure better utilization of the resources in the country.
        The budget of ₹53 billion in a time span of one year 2015-2016 has been allocated to this scheme.\nLaunched: July 01, 2015</p></string>
    <string name="scheme3"><p>To promote natural resource based integrated and climate resilient sustainable farming systems that ensure maintenance and
        increase od soil fertility, natural resource conservation, on-farm nutrient recycling and minimize dependence of farmers on external inputs.\nLaunched: 2015    </p></string>
    <string name="scheme4"><p>Under the scheme an income support of 6,000/- per year in three equal installments will be provided to small and marginal farmer families
        having combined land holding/ownership of up to 2 hectares.\nLaunched: Feb 01, 2019   </p></string>
    <string name="scheme5"><p>Pradhan Mantri Kisan Maandhan Yojana is a government scheme meant for old age protection and social security of Small and Marginal
        Farmers (SMF).\nLaunched: Sept 12, 2019   </p></string>
    <string name="scheme6"><p>Under this, the government plans to issue soil cards to farmers which will carry crop-wise recommendations of nutrients and fertilisers
        required for the individual farms to help farmers to improve productivity through judicious use of inputs.\nLaunched: Feb 19, 2015  </p></string>
    <string name="scheme7"><p>is a capital investment subsidy scheme for the construction or renovation of rural warehouses or godowns for storing farm produce.
        The scheme is aimed at assisting farmers in increasing their holding capacity.\nLaunched: March 31, 2007   </p></string>
    <string name="scheme8"><p>In order to ensure that all eligible farmers are provided with hassle free and timely credit for their agricultural operation.
        Marginal farmers, share croppers, oral lessee and tenant farmers are eligible to be covered under the Scheme.\nLaunched: Aug, 1998  </p></string>
    <string name="scheme9"><p>  </p></string>
    <string name="scheme10"><p>   </p></string>
    <string name="scheme11"><p>   </p>!</string>
    <string name="scheme12"><p>   </p>!</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="last_update">Last update:\n%s</string>
    <string name="last_update_widget">\nLast update: %s</string>
    <string name="search_title">Search for city</string>
    <string name="downloading_data">Downloading your data </string>
    <string name="getting_location">Getting your location </string>
    <string name="error_dateFormat">DATE FORMAT ERROR</string>
    <string name="setting_dateFormat">Date Format</string>
    <string name="setting_dateFormatCustom">Custom Date Format</string>
    <string name="setting_dateFormatCustom_summary">Provide the custom SimpleDateFormat string to be used</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_showTempAsInteger">Show temperature only as an integer</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_auto_detect_location">Detect Location</string>
    <string name="setting_differentiateDaysByTint">Differentiate Days with Color</string>
    <string name="setting_refreshInterval">Background refresh interval</string>
    <string name="setting_unit_mps">Meters per second (m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour (kph)</string>
    <string name="setting_unit_mph">Miles per hour (mph)</string>
    <string name="setting_unit_bft">Beaufort wind scale (bft)</string>
    <string name="setting_unit_kn">Knots (kn)</string>
    <string name="setting_wind_direction_format">Wind direction format</string>
    <string name="settings_none">None</string>
    <string name="setting_apiKey">API key</string>
    <string name="setting_apiKey_summary">Custom API key for OpenWeatherMap queries</string>
    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>
    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>
    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>
    <string name="setting_unit_inhg">in Hg</string>
    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>
    <string name="speed_unit_kn">kn</string>
    <string name="wind_direction_format_none">No indication</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>
    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmhg">mm Hg</string>
    <string name="setting_theme_fresh">Fresh</string>
    <string name="setting_theme_classic">Classic</string>
    <string name="setting_theme_dark">Fresh Dark</string>
    <string name="setting_theme_classic_dark">Classic Dark</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified city is not found.</string>
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>
    <string name="dash_clock_status">%1$s%2$s</string>
    <string name="dash_clock_expanded_title">%1$s%2$s - %3$s</string>
    <string name="dash_clock_expanded_body">%1$s, %2$s\nWind: %3$s %4$s\nPressure: %5$s %6$s\nHumidity: %7$s %%\n</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_title_display">Display</string>
    <string name="settings_title_data">Data</string>
    <string name="setting_displayDecimalZeroes">Display decimal zeroes</string>
    <string name="settings_title_location">Location</string>
    <string name="setting_update_location_automatically">Update location in background</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_settings_message">Location is not enabled. Do you wish to go to the settings menu?</string>
    <string name="location_settings_button">Settings</string>
    <string name="action_weather_map">Weather Map</string>
    <string name="rain">Rain</string>
    <string name="temperature">Temperature</string>
    <string name="action_graphs">Graphs</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="choose">Choose</string>
    <string name="add_description_for_image">Add Description for Image</string>
    <string name="upload">Upload</string>
    <string name="_0_c">0 °C</string>
    <string name="no_data">No data</string>
    <string name="humidity_0">Humidity: 0 %</string>
    <string name="wind_0_m_s">Wind: 0 m/s</string>
    <string name="pressure_0_hpa">Pressure: 0 hpa</string>
    <string name="o">o</string>
    <string name="sr_no">S. No.</string>
    <string name="transport">Transporter</string>
    <string name="webaddress">Web Address</string>
    <string name="transinfo">These are some companies who provides services to farmers in transportation in this pendemic.</string>
    <string name="transtitle">Transportation in COVID-19</string>
    <string name="transin">Transin Logistics</string>
    <string name="suvidha">Truck Suvidha</string>
    <string name="rivigo">Rivigo Services Pvt Ltd</string>
    <string name="guru">Truck Guru</string>
    <string name="elastic">Elastic Run</string>
    <string name="blackbuck">Blackbuck</string>
    <string name="mavyn">Mavyn</string>
    <string name="jusda">Jusda India</string>
    <string name="parivahan">eParivahan</string>
    <string name="famregister">Users have to register on each website.</string>
</resources>