<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:orientation="vertical">

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16:00"
                android:textColor="?android:textColorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/itemWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/wind_0_m_s"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/itemPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure_0_hpa"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/itemHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_0"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/itemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/o"
            android:textSize="48dp" />

        <TextView
            android:id="@+id/itemTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_c"
            android:textSize="22dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/itemIcon"
            android:layout_alignRight="@+id/itemIcon"
            android:layout_alignEnd="@+id/itemIcon" />
    </RelativeLayout>
</LinearLayout>