<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/wavesample1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="Transportation"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:background="@drawable/gradientbutton"
            android:padding="5dp">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transtitle"
                android:textColor="@color/white"
                android:textStyle="bold"></TextView>

        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="6dp">
            <TextView
                android:id="@+id/txt2"
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:text="@string/transinfo"
                android:textAlignment="center"/>
        </TableRow>



    </TableLayout>


    <TextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="INSTITUTIONAL PROVIDERS"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="330dp"
        android:layout_weight="1"
        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow
                android:background="@drawable/gradientbutton"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sr_no"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/transport"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/webaddress"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <TextView
                    android:id="@+id/txt8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rivigo"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="relay.rivigo.com" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="2" />

                <TextView
                    android:id="@+id/txt9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/suvidha"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.trucksuvidha.com" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />

                <TextView
                    android:id="@+id/txt10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transin"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.transin.in" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <TextView
                    android:id="@+id/txt11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/guru"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.truckguru.co.in" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <TextView
                    android:id="@+id/txt12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/elastic"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.elastic.run" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6" />

                <TextView
                    android:id="@+id/txt13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blackbuck"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.blackbuck.com" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7" />

                <TextView
                    android:id="@+id/txt14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="@string/mavyn"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.mavyn.in" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8" />

                <TextView
                    android:id="@+id/txt15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jusda"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.jusdaindia.com" />
            </TableRow>

            <TableRow
                android:background="#ffffff"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9" />

                <TextView
                    android:id="@+id/txt16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/parivahan"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tlink9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="www.eparivahan.com" />
            </TableRow>


            <TableRow
                android:background="#ffffff"
                android:padding="10dp"
                android:layout_marginStart="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NOTE: "
                    android:textStyle="bold"
                    android:textColor="#FF0000"/>

                <TextView
                    android:id="@+id/txt18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/famregister"
                    android:textStyle="bold"
                    android:textColor="#FF0000"/>

            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>